fix speaking to make it nicer and less angry lol

--- a/htdocs/speaking_meh.html
+++ b/htdocs/speaking_meh.html
@@ -123,12 +123,6 @@
 		</div>
 	
 		<div class="topic_trio">
-			<a class="topic gsd" href="#keynotes-please">
-				<h3>Proven<br>Crowd pleasers</h3>
-				<p>The big ticket, clap-along numbers that always land well.</p>
-				<i class="ss-down"></i>			
-			</a>						
-			
 			<a class="topic purpose" href="#keynotes-purpose">
 				<h3>Purpose &amp; <br>Impact</h3>
 				<p>Doing well while doing good, the new 21st century standard.</p>
@@ -138,6 +132,11 @@
 				<h3>Digital <br>Transformation</h3>
 				<p>Building organisations that live and do digital every day.</p>
 				<i class="ss-down"></i>			
+			</a>
+				<a class="topic gsd" href="#keynotes-gsd">
+				<h3>Getting <br>Shit Done</h3>
+				<p>Because people like to do stuff, not make plans about doing stuff.</p>
+				<i class="ss-down"></i>			
 			</a>			
 			<br class="clear">
 		</div>
@@ -146,7 +145,7 @@
 		<dt>1</dt><dd>Technology will eat everything: Where tech is taking us and what this means for normal people who don't own the robots;</dd>
 		<dt>2</dt><dd>Disruption / transformation: What the buzzwords <em>actually</em> mean, when to be scared, and what it means for leadership;</dd>
 		<dt>3</dt><dd>Experience Design: Creating an environment that is obsessive about designing for people. User centric design / design thinking / etc;</dd>
-		<dt>4</dt><dd>Crowd-pleasers: The subtle art of making real things happen instead of writing lengthy business plans;</dd>
+		<dt>4</dt><dd>Getting shit done: The subtle art of making real things happen instead of writing lengthy business plans;</dd>
 		<dt>5</dt><dd>Innovation &amp; Culture: Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation;</dd>
 		<dt>6</dt><dd>Impact: Doing good while doing well, within a business context, in a way that creates measurable social impact;</dd>		
 -->
@@ -154,49 +153,10 @@
 
 </article> 
 
-<article class="full gsd" id="keynotes-please">
-
-	<section>
-		<a data-nav class="btn btn-back" href="#keynotes"><i class="ss-left"></i> Topics overview</a>
-		<a data-nav class="btn btn-home" href="#keynotes"><i class="ss-up"></i> </a>
-		<a data-nav class="btn btn-next" href="#keynotes-purpose"><i class="ss-right"></i> Purpose</a>		
-		
-		<h2>Crowd-pleasers.</h2>
-		
-		<h3>All-bells-and-whistles, clap-along numbers that <em>just work.</em></h3>
-		<p>I&rsquo;ve done more interviews, podcasts and workshop on these topics than I can remember, and I don&rsquo;t <em>ever</em> get tired of these topics...</p>
-		
-		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
-			<h3>The Mars Test.</h3>
-			<p>The story of planning a career around life on Mars, and what whole-planet colonisation means for people in their daily work lives.</p>
-			<dl class="detail">
-				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
-				<dt><i class="ss-usergroup"></i></dt><dd><strong>Audience:</strong> The whole organisation.</dd>
-				<dt><i class="ss-clock"></i></dt><dd><strong>Optimal timing:</strong> Opening keynote, to set the stage for expansive thinking.</dd>		
-				<dt><i class="ss-info"></i></dt><dd><strong>Note:</strong> Can also be delivered as a round-table / small group masterclass.</dd>						
-			</dl>
-		</div>
-		
-		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
-			<h3>And the cops can&rsquo;t do shit.</h3>
-			<p>A deeply personal story about the emotion, spirit and practice of getting shit done. On disruption, crime, and never asking for permission.</p>
-			<dl class="detail">
-				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
-				<dt><i class="ss-usergroup"></i></dt><dd><strong>Audience:</strong> Whole org. Even better an intimate, small group.</dd>
-				<dt><i class="ss-clock"></i></dt><dd><strong>Optimal timing:</strong> End of an event, or post-dinner musing.</dd>
-			</dl>			
-		</div>	
-		
-	</section>
-	
-</article>
-
 <article class="full purpose" id="keynotes-purpose">
 
 	<section>
-		<a data-nav class="btn btn-back" href="#keynotes-please"><i class="ss-left"></i> Crowd pleasers</a>
+		<a data-nav class="btn btn-back" href="#keynotes"><i class="ss-left"></i> Topics overview</a>
 		<a data-nav class="btn btn-home" href="#keynotes"><i class="ss-up"></i> </a>
 		<a data-nav class="btn btn-next" href="#keynotes-digital"><i class="ss-right"></i> Digital transformation</a>		
 		
@@ -233,7 +193,7 @@
 	<section>
 		<a data-nav class="btn btn-back" href="#keynotes-purpose"><i class="ss-left"></i> Purpose &amp; impact</a>
 		<a data-nav class="btn btn-home" href="#keynotes"><i class="ss-up"></i> </a>
-		<a data-nav class="btn btn-next" href="#masterclasses"><i class="ss-right"></i> Masterclasses</a>		
+		<a data-nav class="btn btn-next" href="#keynotes-gsd"><i class="ss-right"></i> Getting shit done</a>		
 		
 		<h2>Digital transformation.</h2>
 		
@@ -263,21 +223,40 @@
 	
 </article>
 
+<article class="full gsd" id="keynotes-gsd">
 
-
-<article class="full">
 	<section>
+		<a data-nav class="btn btn-back" href="#keynotes-purpose"><i class="ss-left"></i> Purpose &amp; impact</a>
+		<a data-nav class="btn btn-home" href="#keynotes"><i class="ss-up"></i> </a>
+		<a data-nav class="btn btn-next" href="#masterclasses"><i class="ss-right"></i> Masterclasses</a>		
+		
+		<h2>Getting shit done.</h2>
+		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-help"></i> <strong>Custom <br>masterclass</strong><em>Bookings</em></a>			
-			<h3>Pour your own:</h3>
-			<p>If you&rsquo;d like to build a mashup of the topics above, or something entirely unique, chat to me <a href="#contact">directly</a> about what we can make together.</p> 
+			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
+			<h3>Stop asking permission.</h3>
+			<p>A no-bullshit, science-driven overview of what causes action, and what leaders can do to empower fast action within their teams.</p>
 			<dl class="detail">
-				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> Your call.</dd>	
-				<dt><i class="ss-map"></i></dt><dd><strong>Key areas:</strong> Purpose, digital, actionism, lean, design and technology.</dd>		
+				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
+				<dt><i class="ss-usergroup"></i></dt><dd><strong>Audience:</strong> The whole organisation.</dd>
+				<dt><i class="ss-clock"></i></dt><dd><strong>Optimal timing:</strong> Opening keynote, to set the stage for expansive thinking.</dd>		
+			</dl>
+		</div>
+		
+		<div class="keydesc">
+			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
+			<h3>Becoming your own best enemy.</h3>
+			<p>A storyteller&rsquo;s approach to the emotion and spirit of the do-er, full of hearty, practical stories of failure, fear, and grit.</p>
+			<dl class="detail">
+				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 45 / 90 minute keynote.</dd>	
+				<dt><i class="ss-usergroup"></i></dt><dd><strong>Audience:</strong> Best in an intimate, small group setting.</dd>
+				<dt><i class="ss-clock"></i></dt><dd><strong>Optimal timing:</strong> End of an event, or post-dinner musing.</dd>
 			</dl>			
-		</div	
+		</div>
 	</section>
+	
 </article>
+
 
 <article class="full alt" id="masterclasses">
 
@@ -347,7 +326,7 @@
 		</div>		
 		
 		<div class="keydesc gsd">
-			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>Agile <br>masterclass</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>GSD <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Entrepreneurship is bullshit:</h3>
 			<p>A practical, interactive session on how to have good ideas, how to trust your gut, and how to make decisions quickly.</p>
 			<dl class="detail">
@@ -360,7 +339,7 @@
 		<div class="keydesc">
 			<a href="#contact" class="panel"><i class="ss-help"></i> <strong>Custom <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Tailored masterclasses:</h3>
-			<p>I have a bag of tricks that can cover almost every eventuality. Speak to me <a href="#contact">directly</a> to chat about what we can build together.</p> 
+			<p>I have a bag of tricks that can cover almost every eventuality. Speak to me directly <a href="#contact">directly</a> to chat about what we can build together.</p> 
 			<dl class="detail">
 				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> From 20 minutes to days / weeks.</dd>	
 				<dt><i class="ss-map"></i></dt><dd><strong>Key areas:</strong> Purpose, digital, actionism, lean, design and technology.</dd>		
