--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -506,7 +506,7 @@
 	
 	<h2>Book me.</h2>
 	
-	<p>Email is usually best.</p>
+	<p>Email is best. 😁 👋</p>
 
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
