--- a/htdocs/award.html
+++ b/htdocs/award.html
@@ -71,24 +71,37 @@
 
 
 
-<aside class="contact"></aside>
+<aside class="leo"></aside>
 
-<article id="contact">
-	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>G&rsquo;day.</h2>
-	
-	<p>To book me for <a href="speaking">speaking,</a> email is best.</p>
+<article id="speaking">
+	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Contact</a>	
 
-	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
-	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
-	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> willdayble</a></p>
-<!-- 	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p> -->
-	<p>&nbsp;</p>
-	<p>If you&rsquo;re a founder and want advice, I do office hours:</p>
-	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/" target="_blank"><i class="ss-right"></i> Book via Startup Victoria</a></p>	
+		<h2>Award Winning</h2>
+
+		<h3>This is sort of a lie: I&rsquo;ve won <em>one</em> small award.</h3>
+		<p>It&rsquo;s the <em>Dean&rsquo;s Excellence in Teaching Award</em>, for Monash University&rsquo;s <a href="https://www.monash.edu/global-challenges" target="_blank">Global Challenges</a> Advanced Honours degree, which is a really cool program that puts social and systems entrepreneurship in curriculum alongside trad science stuff.</p>
+		<p>The very small part I played was in deasigning and lecturing the 2nd year social entrepreneurship component, and smashing <a href="http://fitzroyacademy.com/" target="_blank">video lessons</a> into a '<a href="https://www.google.com/search?q=flipped+flipped+classroom" target="_blank">flipped flipped</a>' learning environment (yeah I know, sounds silly), which was complex but super fun.</p>
+		<p>The GC Director of Education <a href="https://www.linkedin.com/in/rowanbrookes/" target="_blank">Rowan Brookes</a>  is the person you should pay attention to because she did more work and she&rsquo;s rad.</p>
+		<p>Also, if edtech has taught me anything it&rsquo;s that most success is 99% student aptitude and 1% teaching. The HC students are heroes.</p>
+		
+		<p>But, as another, equally great man once said:</p>
+
+</article> 
+
+<article class="alt">
+	<blockquote>
+		<p><span class="lquo">&ldquo;</span>Everything I do is the attitude of an award winner, <br>because I’ve won an award.&rdquo;</p>
+		<cite>
+			- <a href="http://swansonquotes.com/quotes/season02/ep-17-woman-year-award-winner/" target="_blank">Ron Swanson</a>
+		</cite>
+	</blockquote>
 </article>
 
-
+<article class="footer">
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/stacked_wood.jpg" alt="stacked_wood">
+</article>
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
 <script>
