--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,12 +86,13 @@
 <article id="home">	
 	
 	<h2>Will Dayble.</h2>
-	<h3>Award winning lecturer, speaker, &amp; founder.</h3>
+	<h3>Award winning<a href="award">*</a> lecturer, speaker, &amp; fool.</h3>
 
 	<nav>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="work">Floundering <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
+	  <p><a data-nav class="btn" href="links">Links <i class="ss-right"></i></a></p>		  
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
 
