--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -92,7 +92,8 @@
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="links">Links <i class="ss-right"></i></a></p>		  
+	  <p><a data-nav class="btn" href="links">Writing &amp; links <i class="ss-right"></i></a></p>		  
+	  <p><a data-nav class="btn" href="love">Love &amp; attention <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
 
