--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -78,7 +78,7 @@
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
 
 	<h2>Love &amp; attention.</h2>
-	<p>More on <a href="https://www.linkedin.com/in/willdayble/#ember1983" target="_blank">LinkedIn</a> if you&rsquo;re feeling stalky.</p>
+	<p>Testimonials are really weird and a bit of a wank, no?</p>
 </article>
 
 
