--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -124,18 +124,18 @@
 	
 		<div class="topic_trio">
 			<a class="topic gsd" href="#keynotes-please">
-				<h3>Proven<br>Crowd pleasers</h3>
+				<h3><i class="ss-trophy"></i>Proven <br>Crowd pleasers</h3>
 				<p>The big ticket, clap-along numbers that always land well.</p>
 				<i class="ss-down"></i>			
 			</a>						
 			
 			<a class="topic purpose" href="#keynotes-purpose">
-				<h3>Purpose &amp; <br>Impact</h3>
+				<h3><i class="ss-heart"></i>Purpose &amp; <br>Impact</h3>
 				<p>Doing well while doing good, the new 21st century standard.</p>
 				<i class="ss-down"></i>
 			</a>
 			<a class="topic digital" href="#keynotes-digital">
-				<h3>Digital <br>Transformation</h3>
+				<h3><i class="ss-gameplan"></i>Digital <br>Transformation</h3>
 				<p>Building organisations that live and do digital every day.</p>
 				<i class="ss-down"></i>			
 			</a>			
