speaking page with icons

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -167,7 +167,7 @@
 		<p>I&rsquo;ve done more interviews, podcasts and workshop on these topics than I can remember, and I don&rsquo;t <em>ever</em> get tired of these topics...</p>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-trophy"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
 			<h3>The Mars Test.</h3>
 			<p>The story of planning a career around life on Mars, and what whole-planet colonisation means for people in their daily work lives.</p>
 			<dl class="detail">
@@ -179,7 +179,7 @@
 		</div>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-trophy"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
 			<h3>And the cops can&rsquo;t do shit.</h3>
 			<p>A deeply personal story about the emotion, spirit and practice of getting shit done. On disruption, crime, and never asking for permission.</p>
 			<dl class="detail">
@@ -203,7 +203,7 @@
 		<h2>Purpose &amp; impact.</h2>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-heart"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
 			<h3>Impact at scale.</h3>
 			<p>An expansive 101 on the impact space, and what leading practitioners from the edge can teach us about scale, impact and growth.</p>
 			<dl class="detail">
@@ -214,7 +214,7 @@
 		</div>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-heart"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
 			<h3>Purpose in practice.</h3>
 			<p>A down-to-earth conversation about the emotion and practice of change-making, to help audiences feel willing and capable to make change in their own lives and practice.</p>
 			<dl class="detail">
@@ -238,7 +238,7 @@
 		<h2>Digital transformation.</h2>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #1</strong><em>Bookings</em></a>
+			<a href="#contact" class="panel"><i class="ss-gameplan"></i> <strong>Keynote #1</strong><em>Bookings</em></a>
 			<h3>The ugly truth about disruption.</h3>
 			<p>A myth-busting, stage-setting, arse-kicking deep dive into digital transformation, disruption and the truth beyond the buzzwords.</p>
 			<dl class="detail">
@@ -249,7 +249,7 @@
 		</div>
 		
 		<div class="keydesc">
-			<a href="#contact" class="panel"><i class="ss-meeting"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-gameplan"></i> <strong>Keynote #2</strong><em>Bookings</em></a>			
 			<h3>People > technology.</h3>
 			<p>In contrast to the classic &lsquo;mountaintop motivational&rsquo; finisher, we&rsquo;ll look into real tactics and methods normal people can use when they get back to work to develop their digital instincts.</p>
 			<dl class="detail">
@@ -303,7 +303,7 @@
 		<p>Every intensive is built upon fresh ingredients and methodology, so <a href="#contact">chat to me directly</a> about pouring something dangerous together.</p>
 		
 		<div class="keydesc purpose">
-			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>Purpose <br>masterclass</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-heart"></i> <strong>Purpose <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Designing for impact.</h3>
 			<p>A practical dive into designing teams and projects for impact at scale at a whole-organisation or whole-project level.</p>
 			<dl class="detail">
@@ -314,7 +314,7 @@
 		</div>
 		
 		<div class="keydesc purpose">
-			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>Purpose <br>masterclass</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-heart"></i> <strong>Purpose <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Actionism starts at home.</h3>
 			<p>An intimate exploration of the emotion and practice of change-making, to help audiences feel willing and capable to create purpose in their own lives, community and practice.</p>
 			<dl class="detail">
@@ -325,7 +325,7 @@
 		</div>		
 		
 		<div class="keydesc digital">
-			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>Digital <br>masterclass</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-gameplan"></i> <strong>Digital <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Agile, lean and the human spirit.</h3>
 			<p>A paired back, practical experience on driving digital transformation at the team and personal level; language, ritual and behaviour.</p>
 			<dl class="detail">
@@ -336,7 +336,7 @@
 		</div>
 		
 		<div class="keydesc digital">
-			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>Digital <br>masterclass</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-gameplan"></i> <strong>Digital <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Thinking beyond design thinking.</h3>
 			<p>A wide-gamut approach to service design, user experience, lean and design thinking, sans fluff and nonsense.</p>
 			<dl class="detail">
@@ -347,7 +347,7 @@
 		</div>		
 		
 		<div class="keydesc gsd">
-			<a href="#contact" class="panel"><i class="ss-chats"></i> <strong>Agile <br>masterclass</strong><em>Bookings</em></a>			
+			<a href="#contact" class="panel"><i class="ss-planet"></i> <strong>Agile <br>masterclass</strong><em>Bookings</em></a>			
 			<h3>Entrepreneurship is bullshit:</h3>
 			<p>A practical, interactive session on how to have good ideas, how to trust your gut, and how to make decisions quickly.</p>
 			<dl class="detail">
