office hours no longer

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,13 +86,13 @@
 <article id="home">	
 	
 	<h2>Will Dayble.</h2>
-	<h3>Award winning<a href="award">*</a> lecturer, speaker, &amp; fool.</h3>
+	<h3>Award winning<a href="award">*</a> lecturer, founder &amp; fool.</h3>
 
 	<nav>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="links">Writing &amp; links <i class="ss-right"></i></a></p>		  
+	  <p><a data-nav class="btn" href="links">Press &amp; links <i class="ss-right"></i></a></p>		  
 	  <p><a data-nav class="btn" href="love">Love &amp; attention <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
