--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -78,7 +78,8 @@
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
 
 	<h2>Love &amp; attention.</h2>
-	<p>Testimonials are really weird and a bit of a wank, no?</p>
+	<p>Testimonials are super weird, huh?</p>
+
 </article>
 
 
@@ -87,6 +88,7 @@
 	<blockquote class="left">
 		<p><span class="lquo">&ldquo;</span>Will is like an explosion of colour.</p>
 		<p>He&rsquo;s arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.&rdquo;</p>
+		<p>Work with him. You will not regret it.</p>
 		<cite>
 			<img src="design/images/people/charlie.png" alt="Charlie">
 			- Charlie Gleason,
