--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -79,7 +79,9 @@
 
 	<h2>Speaking.</h2>
 
-	<p>From lecture hall to round table, I help folks to take action on the hard stuff with innovation, technology and purpose.</p>
+	<h3>From lecture theatre to wine-soaked heart to heart, I help leaders take action when stuff gets weird.</h3>
+	<p>At a recent gig with <a href="http://www.leadershipvictoria.org/" target="_blank">Leadership Victoria</a>, my delegate feedback was 4.77/5. <em>“By far and away the highest score of the entire program.”</em></p>
+	<p>I am proud that this was for a variant on &lsquo;<a href="#keynotes-please">And The Cops Can&rsquo;t Do Shit</a>&rsquo;, and was delivered to a roomful of senior police leadership types.  &nbsp;😂</p>
 
 
 	<nav>
@@ -116,10 +118,9 @@
 		<div class="header">
 			<h2>
 					<img src="design/images/headers/banksy.png" alt="banksy" width="140">
-				Keynotes / provocations.</h2>
+				Keynotes / Grace Notes.</h2>
 			<p>I&rsquo;m almost always booked for <strong><em>provocations.</em></strong></p>
-			<p><strong>Note:</strong> This style of keynote isn&rsquo;t for everyone, and suits events that are doing something different to the standard motivational fluff.</p>
-			<p>Tasting notes and audience suitability follow:</p>
+			<p><strong>Note:</strong> This style of keynote isn&rsquo;t for everyone, and suits events that are doing something different to the standard motivational fluff.</p>					<p>Tasting notes and audience suitability follow:</p>
 		</div>
 	
 		<div class="topic_trio">
