--- a/htdocs/award.html
+++ b/htdocs/award.html
@@ -77,17 +77,11 @@
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Contact</a>	
 
-		<h2>Award Winner.</h2>
+	<h2>Award Winner.</h2>
 
-		<h3>This is sort of a lie: I&rsquo;ve won <em>one</em> small award.</h3>
-		<p>It&rsquo;s the <em>Dean&rsquo;s Excellence in Teaching Award</em>, for Monash University&rsquo;s <a href="https://www.monash.edu/global-challenges" target="_blank">Global Challenges</a> Advanced Honours degree, which is a really cool program that puts social and systems entrepreneurship in curriculum alongside trad science stuff.</p>
-		<p>The very small part I played was in designing and lecturing the 2nd year social entrepreneurship component, mashing <a href="http://fitzroyacademy.com/" target="_blank">video lessons</a> into a <em><a href="https://www.google.com/search?q=flipped+flipped+classroom" target="_blank">flipped flipped</a></em> learning environment (yeah I know, sounds silly), which was complex and confusing, but fun.</p>
-		<p>The Director of Education <a href="https://www.linkedin.com/in/rowanbrookes/" target="_blank">Rowan Brookes</a> is the person you should applaud and pay attention to because she did the tough work. Keep an eye on her work!</p>
-		<p>Also, if edtech has taught me anything it&rsquo;s that success is 99% student and 1% teaching. The GC students are heroes.</p>
-		
-		<p>But, as another equally great man said:</p>
-
-</article> 
+	<p>Well, this is sort of a lie: I&rsquo;ve won <em>one</em> small award.</p>
+	<p>But, as another equally great man said:</p>		
+</article>
 
 <article class="alt">
 	<blockquote>
@@ -97,6 +91,16 @@
 		</cite>
 	</blockquote>
 </article>
+	
+<article>	
+	<p>The award in question was the <em>Dean&rsquo;s Excellence in Teaching Award</em>, for Monash University&rsquo;s <a href="https://www.monash.edu/global-challenges" target="_blank">Global Challenges</a> Advanced Honours. It's a cool program that puts social and systems entrepreneurship in curriculum alongside traditional science stuff.</p>
+<!-- 	<p>The very small part I played was in designing and lecturing the 2nd year social entrepreneurship component, mashing <a href="http://fitzroyacademy.com/" target="_blank">video lessons</a> into a <em><a href="https://www.google.com/search?q=flipped+flipped+classroom" target="_blank">flipped flipped</a></em> learning environment (yeah I know, sounds silly), which was complex and confusing, but fun.</p> -->
+	<p>The Director of Education <a href="https://www.linkedin.com/in/rowanbrookes/" target="_blank">Rowan Brookes</a> is the person you should applaud and pay lots of attention to. She did the tough work and is an all-round killer.</p>
+	<p>Also, if edtech has taught me anything it&rsquo;s that success is 99% student and 1% teaching. The GC students are heroes.</p>
+
+</article> 
+
+
 
 <article class="footer">
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
