--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -75,9 +75,9 @@
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>G&rsquo;day.</h2>
+	<h2>G&rsquo;day!</h2>
 	
-	<p>To book me for <a href="speaking">speaking,</a> email is best.</p>
+	<p>To book me for <a href="speaking">speaking,</a> email is best. 😁 👋</p>
 
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
