--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -77,24 +77,25 @@
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
 	<h2>Floundering.</h2>
-	<p>Day-to-day, I teach  students around the world to do internets and entrepreneurship more gooder at the <a href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
-	<p>These mobs have (so far) survived my influence:</p>
+	<p>By day I teach  students around the world to do impact, digital and entrepreneurship more gooder at the <a target="_blank" href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
+	<p>These have - so far - survived my influence:</p>
 
 	<div class="projects">
-		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
-		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder</a>
-		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
-		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
-		<a href="//www.monash.edu/global-challenges/"><img src="design/images/projects/monash.jpg" alt="Monash"><strong>Global Challenges</strong><br>Lecturer, Advisor</a>
-		<a href="//themap.co"><img src="design/images/projects/map.jpg" alt="MAP"><strong>MAP</strong><br>Mentor</a>
-		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>		
-		<a href="//www.linkedin.com/in/willdayble"><img src="design/images/projects/linkedin.jpg" alt="LinkedIn"><strong>More on Linkedin</strong><br>@willdayble</a>				
+		<a target="_blank" href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
+		<a target="_blank" href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder</a>
+		<a target="_blank" href="//tiny.org.au"><img src="design/images/projects/tiny.png" alt="GrowStuff"><strong>Tiny Non-profit</strong><br>Chair</a>
+		<a target="_blank" href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
+		<a target="_blank" href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a target="_blank" href="//www.monash.edu/global-challenges/"><img src="design/images/projects/monash.jpg" alt="Monash"><strong>Global Challenges</strong><br>Lecturer, Advisor</a>
+		<a target="_blank" href="//themap.co"><img src="design/images/projects/map.jpg" alt="MAP"><strong>MAP</strong><br>Mentor</a>
+
+		<a target="_blank" href="//www.linkedin.com/in/willdayble"><img src="design/images/projects/linkedin.png" alt="LinkedIn"><strong>More on Linkedin</strong><br>@willdayble</a>				
 
 <!--
-		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>The Cowalition</strong> <br>Founder</a>
-		<a href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
-		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
-		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.jpg" alt="Fitness"><strong>Fitness Everywhere</strong> <br>Chair / Advisor</a>
+		<a target="_blank" href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>The Cowalition</strong> <br>Founder</a>
+		<a target="_blank" href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
+		<a target="_blank" href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
+		<a target="_blank" href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.jpg" alt="Fitness"><strong>Fitness Everywhere</strong> <br>Chair / Advisor</a>
 -->
 
 
