blahh screw all this speaking stuff its probably all lies and subterfuge

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,31 +69,17 @@
 </p>
 <![endif]-->
 
-
-
-<aside>
-<!--
-	<p>
-		<a href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
-		<a href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i></a>
-		<a href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i></a>
-	</p>
--->
-</aside>
-
-
-
-<article id="home">	
+<aside><i class="ss-smile"></i></aside>
+<article id="home">
 	
 	<h2>Will Dayble.</h2>
-	<h3>Award winning<a href="award">*</a> lecturer, founder &amp; fool.</h3>
+	<h3>Hi! I'm a teacher from Melbourne.</h3>
 
 	<nav>
-	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
+<!-- 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	 -->
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
-	  <p><a data-nav class="btn" href="links">Press &amp; links <i class="ss-right"></i></a></p>		  
-	  <p><a data-nav class="btn" href="love">Love &amp; attention <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="links">Links <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
 
