--- a/htdocs/index_showoff.html
+++ b/htdocs/index_showoff.html
@@ -54,7 +54,7 @@
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/dude.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css?2" media="all">
 			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
@@ -71,25 +71,45 @@
 
 
 
-<aside class="contact"></aside>
+<aside>
+<!--
+	<p>
+		<a href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
+		<a href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i></a>
+		<a href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i></a>
+	</p>
+-->
+</aside>
 
-<article id="contact">
-	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>G&rsquo;day!</h2>
+
+
+<article id="home">	
 	
-	<p>Email is usually best. 😁 👋</p>
+	<h2>Will Dayble.</h2>
+	<h3>Award winning<a href="award">*</a> lecturer, founder &amp; fool.</h3>
 
-	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
-	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
-	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> willdayble</a></p>
-<!-- 	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p> -->
+	<nav>
+	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
+	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
+	  <p><a data-nav class="btn" href="links">Press &amp; links <i class="ss-right"></i></a></p>		  
+	  <p><a data-nav class="btn" href="love">Love &amp; attention <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
+	</nav>	
+
 <!--
 	<p>&nbsp;</p>
-	<p>If you&rsquo;re a founder and want advice, I do office hours:</p>
-	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/" target="_blank"><i class="ss-right"></i> Book via Startup Victoria</a></p>	
+	<p>(Also, definitely <a href="nope" class="nope">not a futurist.</a>)
+
+
 -->
+
 </article>
 
+<article class="footer">
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/phone.gif" alt="renovation man">
+</article>
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
