--- a/htdocs/links.html
+++ b/htdocs/links.html
@@ -77,8 +77,8 @@
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Contact</a>	
 
-		<h2>Linky linky.</h2>
-		<p>Online things, mostly text and podcast / interviews:</p>
+		<h2>Linky!</h2>
+		<p>Mostly writing / interviews:</p>
 
 		<ul>
 			<li><a href="http://subtledisruptors.com/willdayble">Subtle Disruptors podcast</a> with Adam Murray, really lovely guy.</li>
