--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -75,27 +75,32 @@
 
 <article id="work">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
-	<h2>Floundering.</h2>
-	<p>By day I teach  students around the world to do impact, digital and entrepreneurship more gooder at the <a target="_blank" href="//fitzroyacademy.com">Fitzroy Academy.</a></p>
-	<p>These have - so far - survived my influence:</p>
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Contact</a>	
+	<h2>The Fitzroy Academy.</h2>
+	<div class="projects fa">
+		<a target="_blank" class="project" href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"></a>		
+		<p>By day I teach students about grass-roots entrepreneurship and social impact stuff at the <a href="//fitzroyacademy.com" target="_blank">Fitzroy Academy.</a></p>
+		<p>I also teach at uni. Teaching is a good job.</p>
+	</div>
+	<hr>
+	<h3>Otherwise, I've had a small part in these:</h3>
 
 	<div class="projects">
-		<a target="_blank" href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
-		<a target="_blank" href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder</a>
-		<a target="_blank" href="//tiny.org.au"><img src="design/images/projects/tiny.png" alt="GrowStuff"><strong>Tiny Non-profit</strong><br>Chair</a>
-		<a target="_blank" href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
-		<a target="_blank" href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
-		<a target="_blank" href="//www.monash.edu/global-challenges/"><img src="design/images/projects/monash.jpg" alt="Monash"><strong>Global Challenges</strong><br>Lecturer, Advisor</a>
-		<a target="_blank" href="//themap.co"><img src="design/images/projects/map.jpg" alt="MAP"><strong>MAP</strong><br>Mentor</a>
 
-		<a target="_blank" href="//www.linkedin.com/in/willdayble"><img src="design/images/projects/linkedin.png" alt="LinkedIn"><strong>More on Linkedin</strong><br>@willdayble</a>				
+		<a target="_blank" class="project" href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder</a>
+		<a target="_blank" class="project" href="//tiny.org.au"><img src="design/images/projects/tiny.png" alt="GrowStuff"><strong>Tiny Non-profit</strong><br>Chair</a>
+		<a target="_blank" class="project" href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
+		<a target="_blank" class="project" href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a target="_blank" class="project" href="//www.monash.edu/global-challenges/"><img src="design/images/projects/monash.jpg" alt="Monash"><strong>Global Challenges</strong><br>Lecturer, Advisor</a>
+		<a target="_blank" class="project" href="//themap.co"><img src="design/images/projects/map.jpg" alt="MAP"><strong>MAP</strong><br>Mentor</a>
+
+		<a target="_blank" class="project" href="//www.linkedin.com/in/willdayble"><img src="design/images/projects/linkedin.png" alt="LinkedIn"><strong>More on Linkedin</strong><br>@willdayble</a>				
 
 <!--
-		<a target="_blank" href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>The Cowalition</strong> <br>Founder</a>
-		<a target="_blank" href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
-		<a target="_blank" href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
-		<a target="_blank" href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.jpg" alt="Fitness"><strong>Fitness Everywhere</strong> <br>Chair / Advisor</a>
+		<a target="_blank" class="project" href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>The Cowalition</strong> <br>Founder</a>
+		<a target="_blank" class="project" href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
+		<a target="_blank" class="project" href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
+		<a target="_blank" class="project" href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.jpg" alt="Fitness"><strong>Fitness Everywhere</strong> <br>Chair / Advisor</a>
 -->
 
 
