go team optimus

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,16 +69,14 @@
 </p>
 <![endif]-->
 
-<aside><i class="ss-smile"></i></aside>
+<aside class="optimus"></aside>
 <article id="home">
 	
 	<h2>Will Dayble.</h2>
 	<h3>Hi! I'm a teacher from Melbourne.</h3>
 
 	<nav>
-<!-- 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	 -->
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="wood">Got wood? <i class="ss-right"></i></a></p>	
 	  <p><a data-nav class="btn" href="links">Links <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
