stop being so lame about putting glitter on the trojan horse Will, you dumb shit. What would Jason do? What would you encourage Jason to NOT do? Pick a side, idiot.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -74,9 +74,12 @@
 	
 	<h2>Will Dayble.</h2>
 	<h3>Hi! I'm a teacher from Melbourne.</h3>
+	<p>I founded some <a href="work">businesses</a>, did some internet stuff, now running an online <a href="https://fitzroyacademy.com/" target="_blank">entrepreneurship + impact school.</a></p>
+	<p>I'm also an amateur <a href="wood">woodworker</a> and enthusiasm enthusiast. In my spare time I don&rsquo;t have any.</p>
 
 	<nav>
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	  
 	  <p><a data-nav class="btn" href="links">Links <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
 	</nav>	
