--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -125,7 +125,7 @@
 		<cite>
 			<img src="design/images/people/frenchie.jpg" alt="buddy">
 			- Frenchie. Dear friend, 
-			<a href="https://www.linkedin.com/in/sampstewart">Head of Technology @ Culture Amp.</a>
+			<a href="https://www.linkedin.com/in/sampstewart">InfoSec, VC and People Geek.</a>
 		</cite>
 	</blockquote>		
 </article>	
