--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -73,17 +73,27 @@
 <aside class="smirk"></aside>
 
 
-<article id="speaking" class="fullheight">
+<article id="speaking">
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 
 
 	<h2>Speaking.</h2>
+	
+</article>
 
-	<h3>From lecture theatre to wine-soaked heart to heart, I help leaders take action when stuff gets weird.</h3>
-	<p>At a recent gig at <a href="http://www.leadershipvictoria.org/" target="_blank">Leadership Victoria</a>, my delegate feedback score was 96/100. <em>“By far and away the highest score of the entire program.”</em></p>
-<!-- 	<p>I am proud that this was for a variant on &lsquo;<a href="#keynotes-please">And The Cops Can&rsquo;t Do Shit</a>&rsquo;, and was delivered to a roomful of senior police leadership types.  &nbsp;😂</p> -->
+<article class="alt">
+	<blockquote class="left tight">
+		<p><span class="lquo">&ldquo;</span>By far and away the highest score of the entire program.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/lv.png" alt="LV">
+			- 96/100 delegate feedback score speaking at <a href="http://www.leadershipvictoria.org/" target="_blank">Leadership Victoria</a>
+		</cite>
+	</blockquote>
+</article>	
 
-
+<article class="fullheight">
+	<h3>I help leaders, entrepreneurs and packed auditorium audiences to take action when stuff gets weird.</h3>
+	<p><strong>Pro tip:</strong> If you didn't notice, stuff has gotten weird lately.</p>
 	<nav>
 	  <p><a data-nav class="btn" href="#keynotes">Keynotes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#masterclasses">Masterclasses <i class="ss-right"></i></a></p>	  
@@ -118,9 +128,9 @@
 		<div class="header">
 			<h2>
 					<img src="design/images/headers/banksy.png" alt="banksy" width="140">
-				Keynotes / grace notes.</h2>
-			<p>I&rsquo;m almost always booked for <strong><em>provocations.</em></strong></p>
-			<p><strong>Note:</strong> This style of keynote isn&rsquo;t for everyone, and suits events that are doing something different to the standard motivational fluff.</p>					<p>Tasting notes and audience suitability follow:</p>
+				Keynotes.</h2>
+			<p>I&rsquo;m booked for <strong><em>provocations.</em></strong></p>
+			<p>This style of keynote isn&rsquo;t for boring events. Tasting notes:</p>
 		</div>
 	
 		<div class="topic_trio">
