--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -76,14 +76,14 @@
 <article id="work">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Contact</a>	
-	<h2>The Fitzroy Academy.</h2>
+	<h2>Hardly working.</h2>
 	<div class="projects fa">
 		<a target="_blank" class="project" href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"></a>		
 		<p>By day I teach students about grass-roots entrepreneurship and social impact stuff at the <a href="//fitzroyacademy.com" target="_blank">Fitzroy Academy.</a></p>
-		<p>I also teach at uni. Teaching is a good job.</p>
+		<p>I also teach an <a href="award">award winning uni course.</a> Teaching is good!</p>
 	</div>
 	<hr>
-	<h3>Otherwise, I've had a small part in these:</h3>
+	<h3>I've had a small part in these:</h3>
 
 	<div class="projects">
 
