speaking and stuff fixed up

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -175,7 +175,7 @@
 		<h2>Crowd-pleasers.</h2>
 		
 		<h3>All-bells-and-whistles, clap-along numbers that <em>just work.</em></h3>
-		<p>I&rsquo;ve done more interviews, podcasts and workshop on these topics than I can remember, and I don&rsquo;t <em>ever</em> get tired of these topics...</p>
+		<p>I&rsquo;ve done more interviews, podcasts and workshop on these subjects than I can remember, and I don&rsquo;t <em>ever</em> get tired of talking about this stuff...</p>
 		
 		<div class="keydesc">
 			<a href="#contact" class="panel"><i class="ss-trophy"></i> <strong>Keynote #1</strong><em>Bookings</em></a>			
@@ -472,7 +472,7 @@
 	<p>See <a href="http://speakerdiversity.com" target="_blank">speakerdiversity.com</a> for more on this.</p>
 
 	<h3>Audio visual</h3>
-	<p><strong>It&rsquo;s 2017, people:</strong> Ensure direct HDMI (not RGB) is available.</p>
+	<p><strong>It&rsquo;s #currentyear, folks:</strong> Ensure direct HDMI (not RGB) is available.</p>
 	<p>I use my own laptop and clicker. If I must use your presentation tech, please ensure we are using an up to date version of Keynote, with a quality clicker ahead of time.</p>
 	<p>I rarely require sound output. I will let you know  if I do.</p>
 	<p>My laptop - or the speaker monitor - should be positioned to the side of the stage, within easy view of the most distant place I will be standing on the stage. I move around a lot.</p>
