--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -320,7 +320,7 @@
 			<dl class="detail">
 				<dt><i class="ss-info"></i></dt><dd><strong>Format:</strong> 3 hour masterclass.</dd>	
 				<dt><i class="ss-usergroup"></i></dt><dd><strong>Audience:</strong> Up to 12 delegates.</dd>
-				<dt><i class="ss-clock"></i></dt><dd><strong>Optimal timing:</strong> Morning, with a short mid-masterclass break.</dd>		
+				<dt><i class="ss-clock"></i></dt><dd><strong>Optimal timing:</strong> Morning, with a short mid-masterclass break.</dd>
 			</dl>
 		</div>
 		
@@ -468,7 +468,7 @@
 	<p>Please read this carefully, and get in touch if I can help out in any way.</p>
 	<h3>Gender diversity</h3>
 	<p>I will not speak at any event with only male speakers, nor will I be part of a panel with only male presenters. This is non-negotiable. </p> 
-	<p>If you&rsquo;re putting together an event and want some interesting speakers, hit me up and I can absolutely help you source some great talent!</p>
+	<p>If you&rsquo;re putting together an event and want some interesting speakers, hit me up and I can absolutely help you source some great talent, most of whom are much more qualified and impressive than myself.</p>
 	<p>See <a href="http://speakerdiversity.com" target="_blank">speakerdiversity.com</a> for more on this.</p>
 
 	<h3>Audio visual</h3>
